homelab/homepage/ingress-public.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homepage-public
  namespace: homelab
spec:
  ingressClassName: traefik
  rules:
    - host: homepage.oscargicast.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: homepage
                port:
                  number: 3000
